@@ -312,6 +312,7 @@ File presentation:
   --color-colno=COLOR
   --color-lineno=COLOR          Set the color for filenames, matches, line and
                                 column numbers.
+  --help-colors                 Show a list of possible color combinations.
   --flush                       Flush output immediately, even when ack is used
                                 non-interactively (when output goes to a pipe or
                                 file).
@@ -364,6 +365,8 @@ Miscellaneous:
                                 (--filter) or tty (--nofilter)
   --help, -?                    This help
 $manual_options
+  --help-types                  Display all known types, and how they're defined.
+  --help-colors                 Show a list of possible color combinations.
   --thpppt                      Bill the Cat
   --bar                         The warning admiral
   --cathy                       Chocolate! Chocolate! Chocolate!
@@ -425,6 +428,117 @@ END_OF_HELP
     }
 
     return;
+}
+
+
+=head2 show_help_colors()
+
+Display the colors help subpage.
+
+=cut
+
+sub show_help_colors {
+    App::Ack::print( <<'END_OF_HELP' );
+ack allows customization of the colors it uses when presenting matches
+onscreen.  See the "ACK COLORS" section of the ack manual (ack --man).
+
+Here is a chart of how various color combinations appear: Each of the eight
+foreground colors, on each of the eight background colors or no background
+color, with and without the bold modifier.
+
+Run ack --help-rgb-colors for a chart of the RGB colors.
+
+END_OF_HELP
+
+    _show_color_grid();
+
+    return;
+}
+
+
+=head2 show_help_rgb()
+
+Display the RGB help subpage.
+
+=cut
+
+sub show_help_rgb {
+    App::Ack::print( <<'END_OF_HELP' );
+ack allows customization of the colors it uses when presenting matches
+onscreen.  See the "ACK COLORS" section of the ack manual (ack --man).
+
+Here is a grid of the 216 possible RGB colors.  For the standard color
+grid, run ack --help-colors.
+END_OF_HELP
+
+    _show_rgb_grid();
+
+    return;
+}
+
+
+sub _show_color_grid {
+    my $cell_width = 7;
+
+    my @fg_colors = qw( black red green yellow blue magenta cyan white );
+    my @bg_colors = map { "on_$_" } @fg_colors;
+
+    App::Ack::say(
+        _color_cell( '' ),
+        map { _color_cell( $_ ) } @fg_colors
+    );
+
+    App::Ack::say(
+        _color_cell( '' ),
+        map { _color_cell( '-' x $cell_width ) } @fg_colors
+    );
+
+    for my $bg ( '', @bg_colors ) {
+        App::Ack::say(
+            _color_cell( '' ),
+            ( map { _color_cell( $_, "$_ $bg" ) } @fg_colors ),
+            $bg
+        );
+
+        App::Ack::say(
+            _color_cell( 'bold' ),
+            ( map { _color_cell( $_, "bold $_ $bg" ) } @fg_colors ),
+            $bg
+        );
+        App::Ack::say();
+    }
+
+    return;
+}
+
+
+sub _color_cell {
+    my $text  = shift;
+    my $color = shift;
+
+    my $cell_width = 7;
+    $text = sprintf( '%-*s', $cell_width, $text );
+
+    return ($color ? Term::ANSIColor::colored( $text, $color ) : $text) . ' ';
+}
+
+
+sub _show_rgb_grid {
+    for my $r ( 0 .. 5 ) {
+        for my $g ( 0 .. 5 ) {
+            for my $b ( 0 ..5 ) {
+                my $rgb = "$r$g$b";
+                my $code = "rgb$r$g$b";
+
+                App::Ack::print(
+                    Term::ANSIColor::colored( $code, $code ),
+                    Term::ANSIColor::colored( $code, "reverse $code" ),
+                    ' '
+                );
+            }
+            App::Ack::say( '' );
+        }
+    }
 }
 
 
